--- a/style/index.css
+++ b/style/index.css
@@ -32,16 +32,40 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background: #A7E9AF;
-    border: 1px solid #99CEA8;
-    border-radius: 5px;
+    position: relative;
 }
 
 .card img {
     width: 100px;
     height: 100px;
 }
+
+.face {
+    width: 100%;
+    height: 100%;
+    background-color: #A7E9AF;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
+  }
+
+  .back-face{
+    transform: rotateY(180deg);
+  }
+
+  .card .back-face {
+    transform: rotateY(0deg);
+  }
+
+  .card .front-face {
+    transform: rotateY(-180deg);
+  }
 
 @media (max-width: 629px) {
 	.container {
